# dodona-containerfile-evaluator

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml
dodona/: Cargo.toml
dodona-containerfile-evaluator/: Cargo.toml
dodona-containerfile-evaluator/resources/: en.flt  nl.flt
dodona-containerfile-evaluator/src/: config.rs  main.rs
dodona/src/: lib.rs
dodona/tests/: example.json  tests.rs
