[package]
name = "dodona-containerfile-evaluator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
dockerfile-parser = "0.9"
dodona = { path = "../dodona" }
serde_json = "1.0"

[dependencies.clap]
version = "4.5"
default-features = false
features = [
    "cargo",
    "error-context",
    "help",
    "std",
    "usage",
]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
