[package]
name = "dodona-containerfile-evaluator"
version = "0.3.0"
edition = "2021"
license = "MIT"

[dependencies]
dockerfile-parser = { git = "https://github.com/Bond-009/dockerfile-parser-rs.git", branch="dev" }
dodona = { path = "../dodona" }
fluent = "0.16"
serde_json = "1.0"
unic-langid = "0.9"

[dependencies.clap]
version = "4.5"
default-features = false
features = [
    "cargo",
    "error-context",
    "help",
    "std",
    "usage",
]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
